[package]
name = "grabber"
version = "0.1.0"
edition = "2018"
authors = ["reynn <224374+reynn@users.noreply.github.com>"]

[dependencies]
# rawr = { git = "https://github.com/reynn/rawr", branch = "reqwest" }
rawr = { path = "../rawr" }
clap = { git = "https://github.com/clap-rs/clap/" }
reqwest = "0.10.4"
log = "0.4.8"
simplelog = "0.7.5"
chrono = "0.4.11"
toml = "0.5.6"
serde_derive = "1.0.106"
serde = "1.0.106"
rayon = "1.1"
