[package]
name = "grabber"
version = "0.1.0"
edition = "2018"
authors = ["reynn <224374+reynn@users.noreply.github.com>"]

[dependencies]
#rawr = { git = "https://github.com/reynn/rawr", branch = "reqwest" }
rawr = { path = "../rawr" }
clap = { git = "https://github.com/clap-rs/clap/" }
reqwest = "~0.10"
log = "~0.4"
simplelog = "~0.7"
chrono = "~0.4"
toml = "~0.5"
serde_derive = "~1.0"
serde = "~1.0"
rayon = "~1.3"
error-chain = "~0.12"
