[package]
name = "grabber"
version = "0.1.0"
edition = "2018"
authors = ["reynn <224374+reynn@users.noreply.github.com>"]

[dependencies]
clap = "3.0.0-beta.1"
reqwest = { version = "0.10", features = ["json"] }
log = "0.4"
fern = "0.6"
chrono = "0.4"
toml = "0.5"
crossbeam-channel = "0.4"
futures = "0.3"
lazy_static = "1.4"
serde_json = "1.0"
serde_derive = "1.0"
async-trait = "0.1"
serde = "1.0"
rayon = "1.3"
tokio = { version = "~0.2", features = ["full"] }
error-chain = "~0.12"

[dev-dependencies]
test-case = { version = "~1.0" }
futures-await-test = { version = "~0.3" }
